# LlvmCrossCompileArmCortexM

./: CMakeLists.txt  README.md  Worklog.md
cmake/: dependencies.cmake  llvm_project.cmake  llvm_toolchain_file.cmake  newlib.cmake  tweaks.cmake  utils.cmake
scripts/: build_multiple_archs.py
src/: CMakeLists.txt  custom_fprintf.c  init_fini.c
